[1991] Fixed broken layout when in TR mode. Updated CSS to show clickable headers.

--- a/htdocs/styles/css/minimal/screen/content_minimal.css
+++ b/htdocs/styles/css/minimal/screen/content_minimal.css
@@ -42,7 +42,7 @@
   #main  h1 span, #main_top h1 span, #teaser h1 span.small { margin: 0; padding: 0; }
   .list h5 {  padding-top: 0;}
 
-  h2 a, h3 a {color: #333; }
+  h2 a, h3 a {color: #2184e8; }
   h2 a:hover , h3 a:hover {color:#2184e8;}
 
 
